fixes spacing when there is no build, but a package.

--- a/app/source/components/project/project.scss
+++ b/app/source/components/project/project.scss
@@ -27,7 +27,7 @@
   margin-bottom: 20px;
 }
 
-.project-package {
+.project-build + .project-package {
   margin-top: 10px;
 }
 
